--- a/android/expoview/build.gradle
+++ b/android/expoview/build.gradle
@@ -109,6 +109,7 @@ configurations.all {
 }
 
 dependencies {
+  def room_version = "1.1.1"
   api fileTree(dir: 'libs', include: ['*.jar'])
   api 'com.android.support:multidex:1.0.3'
 
@@ -285,4 +286,7 @@ dependencies {
   // expo-file-system
   api 'com.squareup.okhttp3:okhttp:3.10.0'
   api 'com.squareup.okhttp3:okhttp-urlconnection:3.10.0'
+
+  implementation "android.arch.persistence.room:runtime:$room_version"
+  annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 }
