--- a/android/expoview/build.gradle
+++ b/android/expoview/build.gradle
@@ -287,6 +287,6 @@ dependencies {
   api 'com.squareup.okhttp3:okhttp:3.10.0'
   api 'com.squareup.okhttp3:okhttp-urlconnection:3.10.0'
 
-  implementation "android.arch.persistence.room:runtime:$room_version"
+  api "android.arch.persistence.room:runtime:$room_version"
   annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 }
