--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,6 @@
 PATH_add tools/bin
 
-export NIX_PATH=nixpkgs=`pwd`
+export NIX_PATH="nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixos-18.09.tar.gz:expo=`pwd`"
 
 source_local() {
   file=./.envrc.local
