--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,7 +173,7 @@ jobs:
           working_directory: ~/expo # need jsc-android dependency in expokit-npm-package
       - yarn:
           working_directory: ~/expo/tools-public
-      - run: nix-env -f . -iA nodejs-8_x # For some reason `nix run` doesn't work
+      - run: nix-env -f nix -iA nodejs-8_x # For some reason `nix run` doesn't work
       - run: ~/expo/tools-public/generate-dynamic-macros-android.sh
       - restore_gradle_cache
       - run:
